--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,24 +1,15 @@
-# Maven package Java project Web App to Linux on Azure
-# Build your Java project and deploy it to Azure as a Linux web app
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/java
-
 trigger:
 - main
 
 variables:
-
   # Azure Resource Manager connection created during pipeline creation
-  azureSubscription: 'fb1dfff9-2cbb-4676-bb62-dd2b25f75a7e'
+  azureSubscription: '64c63129-362c-4c19-8e2e-2f9ce52f6d73'
 
   # Web app name
   webAppName: 'storageapp'
 
   # Environment name
   environmentName: 'storageapp'
-
-  # Agent VM image name
-  vmImageName: 'ubuntu-latest'
 
 stages:
 - stage: Build
@@ -27,17 +18,25 @@ stages:
   - job: MavenPackageAndPublishArtifacts
     displayName: Maven Package and Publish Artifacts
     pool:
-      vmImage: $(vmImageName)
+      name: Default
+      demands:
+        - agent.name -equals vivek
 
     steps:
+    - script: |
+        echo "Installing dependencies..."
+        sudo apt-get update
+        sudo apt-get install -y openjdk-17-jdk maven
+        mvn -v
+      displayName: 'Install Java 17 and Maven'
+
     - task: Maven@4
       displayName: 'Maven Package'
       inputs:
         mavenPomFile: 'pom.xml'
         mavenOptions: '-Xmx3072m'
-        javaHomeOption: 'JDKVersion'
-        jdkVersionOption: '1.17' 
-        jdkArchitectureOption: 'x64'
+        javaHomeOption: 'Path'
+        jdkDirectory: '/usr/lib/jvm/java-17-openjdk-amd64'
         publishJUnitResults: true
         testResultsFiles: '**/surefire-reports/TEST-*.xml'
         goals: 'clean package'
@@ -56,12 +55,16 @@ stages:
   displayName: Deploy stage
   dependsOn: Build
   condition: succeeded()
+  
   jobs:
   - deployment: DeployLinuxWebApp
     displayName: Deploy Linux Web App
     environment: $(environmentName)
     pool:
-      vmImage: $(vmImageName)
+      name: Default
+      demands:
+        - agent.name -equals vivek
+
     strategy:
       runOnce:
         deploy:
