--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -61,10 +61,13 @@ stages:
       runOnce:
         deploy:
           steps:
+          - download: current
+            artifact: drop
+
           - task: AzureWebApp@1
             displayName: 'Azure Web App Deploy: storageapp'
             inputs:
               azureSubscription: $(azureSubscription)
               appType: webAppLinux
               appName: $(webAppName)
-              package: '$(Pipeline.Workspace)/drop/**/target/*.war'
+              package: '$(Pipeline.Workspace)/drop/**/*.war'
