--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,6 +19,9 @@ stages:
     displayName: Maven Package and Publish Artifacts
     pool:
       name: Default
+      demands:          # fixed indentation and syntax
+        - agent.name -equals 'vivek'
+
     steps:
     - task: Maven@4
       displayName: 'Maven Package'
@@ -40,8 +43,11 @@ stages:
           **/target/*.jar
         TargetFolder: '$(Build.ArtifactStagingDirectory)'
 
-    - upload: $(Build.ArtifactStagingDirectory)
-      artifact: drop
+    - task: PublishBuildArtifacts@1     # fixed: use proper task
+      inputs:
+        PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+        ArtifactName: 'drop'
+        publishLocation: 'Container'
 
 - stage: Deploy
   displayName: Deploy stage
@@ -55,7 +61,7 @@ stages:
     pool:
       name: Default
       demands:
-        - agent.name -equals vivek
+        - agent.name -equals 'vivek'
 
     strategy:
       runOnce:
@@ -71,4 +77,3 @@ stages:
               appType: webAppLinux
               appName: $(webAppName)
               package: '$(Pipeline.Workspace)/drop/**/*.*ar'  # matches .war or .jar
-
