--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,12 +59,12 @@ stages:
       runOnce:
         deploy:
           steps:
-            - task: DownloadBuildArtifacts@1
-              inputs:
-                buildType: 'current'
-                downloadType: 'specific'
-                downloadPath: '$(System.ArtifactsDirectory)'
-                cleanDestinationFolder: true
+          #   - task: DownloadBuildArtifacts@1
+          #     inputs:
+          #       buildType: 'current'
+          #       downloadType: 'specific'
+          #       downloadPath: '$(System.ArtifactsDirectory)'
+          #       cleanDestinationFolder: true
             - task: AzureRmWebAppDeployment@5
               inputs:
                 ConnectionType: 'AzureRM'
